--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" type="text/css" href="main.css">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="parallax.css">
-    <link href="/YOUR_PATH/favicon.ico" rel="icon" type="image/x-icon" />	
-    <title>People House</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">-->
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <link rel="stylesheet" type="text/css" href="styles/main.css">
+    <link rel="stylesheet" type="text/css" href="styles/parallax.css">
+    <link href="/YOUR_PATH/favicon.ico" rel="icon" type="image/x-icon" />
+    <title>Home | People House</title>
   </head>
   <body>
     <!-- Header -->
     <header>
+      <img class="site_banner">
       <nav>
         <!-- Main Menu -->
         <ul class="main-menu">
@@ -47,9 +50,9 @@
           </li>
         </ul>
       </nav>
-<div id="scroll-animate">
-  <div id="scroll-animate-main">
-    <div class="wrapper-parallax">    
+      <div id="scroll-animate">
+        <div id="scroll-animate-main">
+          <div class="wrapper-parallax">    
     </header>
     <!-- Hero Section -->
       <section class="hero" id="hero">
