--- a/index.html
+++ b/index.html
@@ -6,31 +6,37 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">-->
     <link rel="stylesheet" type="text/css" href="styles/style.css">
-    <link rel="stylesheet" type="text/css" href="styles/main.css">
-    <link rel="stylesheet" type="text/css" href="styles/parallax.css">
+    <!-- <link rel="stylesheet" type="text/css" href="styles/main.css"> -->
+    <!-- <link rel="stylesheet" type="text/css" href="styles/parallax.css">-->
+    <link rel="stylesheet" type="text/css" href="styles/nav.css">
     <link href="/YOUR_PATH/favicon.ico" rel="icon" type="image/x-icon" />
     <title>Home | People House</title>
   </head>
   <body>
     <!-- Header -->
     <header>
+      <!-- Hero Section -->
+      <section class="hero" id="hero">
+        <h2 class="hero_header">People<span class="light">House</span></h2>
+         <p class="tagline">Your safe space, to work on you!</p>
       <img class="site_banner">
       <nav>
         <!-- Main Menu -->
-        <ul class="main-menu">
+        <ul class="hList">
           <li>
-            <p class="main-menu-labels">Who are we</p>
-            <!-- Products Sub Menu -->
-            <ul class="sub-menu">
+            <a href="#click" class="menu"><h2 class="menu-title">Who are we!</h2>
+            <!-- Who are we Sub Menu -->
+            <ul class="menu-dropdown">
               <li>Purpose</li>
               <li>Practice</li>
               <li>People</li>
             </ul>
+            </a>
           </li>
           <li>
-            <p class="main-menu-labels">What we offer</p>
+            <a href="#click" class="menu"><h2 class="menu-title menu-title_2nd">Who are we!</h2></a>
             <!-- Services Sub Menu -->
-            <ul class="sub-menu">
+            <ul class="menu-dropdown">
               <li>One-on-one Counseling</li>
               <li>Couples Counseling</li>
               <li>Family Counseling</li>
@@ -40,9 +46,9 @@
             </ul>
           </li>
           <li>
-            <p class="main-menu-labels">Where are we</p>
+            <a href="#click" class="menu"><h2 class="menu-title menu-title_2nd">Who are we!</h2></a>
             <!-- Company Sub Menu -->
-            <ul class="sub-menu">
+            <ul class="menu-dropdown">
               <li>Central/li>
               <li>North</li>
               <li>East</li>
@@ -50,15 +56,12 @@
           </li>
         </ul>
       </nav>
+    </section>
       <div id="scroll-animate">
         <div id="scroll-animate-main">
           <div class="wrapper-parallax">    
     </header>
-    <!-- Hero Section -->
-      <section class="hero" id="hero">
-        <h2 class="hero_header">People<span class="light">House</span></h2>
-        <p class="tagline">Your safe space, to work on you!</p>
-      </section>
+
     <!-- Parallax Section -->
       <section class="banner">
         <h2 class="parallax">We are here for you! Yes. You!</h2>
