Make CSS styling edits to the menu/nav section, organized images, added menu/nav to about.html and services.html

--- a/index.html
+++ b/index.html
@@ -4,27 +4,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">-->
-    <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <!-- <link rel="stylesheet" type="text/css" href="styles/main.css"> -->
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
     <!-- <link rel="stylesheet" type="text/css" href="styles/parallax.css">-->
     <link rel="stylesheet" type="text/css" href="styles/nav.css">
-    <link href="/YOUR_PATH/favicon.ico" rel="icon" type="image/x-icon" />
+    <!-- <link href="/YOUR_PATH/favicon.ico" rel="icon" type="image/x-icon" /> -->
     <title>Home | People House</title>
   </head>
   <body>
     <!-- Header -->
     <header>
-      <!-- Hero Section -->
-      <section class="hero" id="hero">
-        <h2 class="hero_header">People<span class="light">House</span></h2>
-         <p class="tagline">Your safe space, to work on you!</p>
-      <img class="site_banner">
+      <h2 class="hero_header">People<span class="light">House</span></h2>
       <nav>
         <!-- Main Menu -->
         <ul class="hList">
           <li>
-            <a href="#click" class="menu"><h2 class="menu-title">Who are we!</h2>
+            <a href="#click" class="menu"><h2 class="menu-title">Who?</h2>
             <!-- Who are we Sub Menu -->
             <ul class="menu-dropdown">
               <li>Purpose</li>
@@ -34,7 +30,7 @@
             </a>
           </li>
           <li>
-            <a href="#click" class="menu"><h2 class="menu-title menu-title_2nd">Who are we!</h2></a>
+            <a href="#click" class="menu"><h2 class="menu-title menu-title_2nd">What?</h2>
             <!-- Services Sub Menu -->
             <ul class="menu-dropdown">
               <li>One-on-one Counseling</li>
@@ -44,9 +40,10 @@
               <li>Children's Therapy</li>
               <li>Play Therapy</li>
             </ul>
+          </a>
           </li>
           <li>
-            <a href="#click" class="menu"><h2 class="menu-title menu-title_2nd">Who are we!</h2></a>
+            <a href="#click" class="menu"><h2 class="menu-title menu-title_3rd">Where?</h2>
             <!-- Company Sub Menu -->
             <ul class="menu-dropdown">
               <li>Central/li>
@@ -55,6 +52,7 @@
             </ul>
           </li>
         </ul>
+      </a>
       </nav>
     </section>
       <div id="scroll-animate">
@@ -63,14 +61,20 @@
     </header>
 
     <!-- Parallax Section -->
-      <section class="banner">
-        <h2 class="parallax">We are here for you! Yes. You!</h2>
-        <p class="parallax_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-      </section>
+
+    <!-- Hero Section -->
+ 
+
      <!-- Main Section -->
      <main>
+      <section class="banner">
+        <p class="tagline">Your safe space, to work on you!</p>
+        <img class="site_banner">
+        <h2 class="parallax">We are here for you! Yes. You!</h2>
+        <p class="parallax_description">Placeholder</p>
+      </section>
+       <!-- This is where I need to insert the gallery scroller-->
     </main>
-
       <!-- About Section -->
     <section class="about" id="about">
       <h2 class="hidden">Meet Your Therapist</h2>
@@ -78,27 +82,71 @@
       <p class="text_column">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
       <p class="text_column">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
     </section>
-    <!-- Stats Gallery Section -->
+    <!-- Practitioner Gallery Section -->
     <div class="gallery">
       <div class="thumbnail">
-        <h1 class="stats"></h1>
-        <h4>TITLE</h4>
-        <p>Placeholder Header</p>
+        <a href="thumb" alt="therapist1" title="th1"><img src="img/cou1.png"></a>
       </div>
       <div class="thumbnail">
-        <h1 class="stats"></h1>
-        <h4>TITLE</h4>
-        <p>Placeholder Header</p>
+        <a href="thumb" alt="therapist1" title="th1"><img src="img/cou2.png"></a>
       </div>
       <div class="thumbnail">
-        <h1 class="stats"></h1>
-        <h4>TITLE</h4>
-        <p>Placeholder Header</p>
+        <a href="thumb" alt="therapist1" title="th1"><img src="img/cou3.png"></a>
+      </div>
       </div>
       <div class="thumbnail">
-        <h1 class="stats"></h1>
-        <h4>TITLE</h4>
-        <p>Placeholder Header</p>
+        <a href="thumb" alt="therapist1" title="th1"><img src="img/cou4.png"></a>
+      </div>
+      <div class="thumbnail">
+        <a href="thumb" alt="therapist1" title="th1"><img src="img/cou5.png"></a>
+      </div>
+      <div class="thumbnail">
+        <a href="thumb" alt="therapist1" title="th1"><img src="img/cou6.png"></a>
+      </div>
+      <div class="thumbnail">
+        <a href="thumb" alt="therapist1" title="th1"><img src="img/cou7.png"></a>
+      </div>
+      <div class="thumbnail">
+        <a href="thumb" alt="therapist1" title="th1"><img src="img/cou8.png"></a>
+      </div>
+      <div class="thumbnail">
+        <a href="thumb" alt="therapist1" title="th1"><img src="img/cou9.png"></a>
+      </div>
+      <div class="thumbnail">
+        <a href="thumb" alt="therapist1" title="th1"><img src="img/cou10.png"></a>
+      </div>
+      <div class="thumbnail">
+        <a href="thumb" alt="therapist1" title="th1"><img src="img/cou11.png"></a>
+      </div>
+      <div class="thumbnail">
+        <a href="thumb" alt="therapist1" title="th1"><img src="img/cou12.png"></a>
+      </div>
+      <div class="thumbnail">
+        <a href="thumb" alt="therapist1" title="th1"><img src="img/cou13.png"></a>
+      </div>
+      <div class="thumbnail">
+        <a href="thumb" alt="therapist1" title="th1"><img src="img/cou14.png"></a>
+      </div>
+      <div class="thumbnail">
+        <a href="thumb" alt="therapist1" title="th1"><img src="img/cou15.png"></a>
+      </div>
+      <div class="thumbnail">
+        <a href="thumb" alt="therapist1" title="th1"><img src="img/cou16.png"></a>
+      </div>
+      <div class="thumbnail">
+        <a href="thumb" alt="therapist1" title="th1"><img src="img/cou17.png"></a>
+      </div>
+      <div class="thumbnail">
+        <a href="thumb" alt="therapist1" title="th1"><img src="img/cou18.png"></a>
+      </div>
+      <div class="thumbnail">
+        <a href="thumb" alt="therapist1" title="th1"><img src="img/cou19.png"></a>
+      </div>
+      <div class="thumbnail">
+        <a href="thumb" alt="therapist1" title="th1"><img src="img/cou20.png"></a>
+      </div>
+      <div class="thumbnail">
+        <a href="thumb" alt="therapist1" title="th1"><img src="img/cou21.png"></a>
       </div>
     </div>
     <!-- Footer -->
