Added js script for slider

--- a/index.html
+++ b/index.html
@@ -82,7 +82,151 @@
       <p class="text_column">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
       <p class="text_column">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
     </section>
-    <!-- Practitioner Gallery Section -->
+
+    <!-- Slideshow container -->
+    <div class="slideshow-container">
+
+      <!-- Full-width images with number and caption text -->
+      <div class="mySlides fade">
+        <div class="numbertext">1 / 3</div>
+        <img src="img/cou1.png" style="width:100%">
+        <div class="text">Counselor</div>
+      </div>
+
+      <div class="mySlides fade">
+        <div class="numbertext">1 / 3</div>
+        <img src="img/cou2.png" style="width:100%">
+        <div class="text">Counselor</div>
+      </div>
+
+      <div class="mySlides fade">
+        <div class="numbertext">1 / 3</div>
+        <img src="img/cou3.png" style="width:100%">
+        <div class="text">Counselor</div>
+      </div>
+
+      <div class="mySlides fade">
+        <div class="numbertext">1 / 3</div>
+        <img src="img/cou4.png" style="width:100%">
+        <div class="text">Counselor</div>
+      </div>
+
+      <div class="mySlides fade">
+        <div class="numbertext">1 / 3</div>
+        <img src="img/cou5.png" style="width:100%">
+        <div class="text">Counselor</div>
+      </div>
+
+      <div class="mySlides fade">
+        <div class="numbertext">1 / 3</div>
+        <img src="img/cou6.png" style="width:100%">
+        <div class="text">Counselor</div>
+      </div>
+
+      <div class="mySlides fade">
+        <div class="numbertext">1 / 3</div>
+        <img src="img/cou7.png" style="width:100%">
+        <div class="text">Counselor</div>
+      </div>
+
+      <div class="mySlides fade">
+        <div class="numbertext">1 / 3</div>
+        <img src="img/cou8.png" style="width:100%">
+        <div class="text">Counselor</div>
+      </div>
+
+      <div class="mySlides fade">
+        <div class="numbertext">1 / 3</div>
+        <img src="img/cou9.png" style="width:100%">
+        <div class="text">Counselor</div>
+      </div>
+
+      <div class="mySlides fade">
+        <div class="numbertext">1 / 3</div>
+        <img src="img/cou10.png" style="width:100%">
+        <div class="text">Counselor</div>
+      </div>
+      
+      <div class="mySlides fade">
+        <div class="numbertext">1 / 3</div>
+        <img src="img/cou11.png" style="width:100%">
+        <div class="text">Counselor</div>
+      </div>
+
+      <div class="mySlides fade">
+        <div class="numbertext">1 / 3</div>
+        <img src="img/cou12.png" style="width:100%">
+        <div class="text">Counselor</div>
+      </div>
+
+      <div class="mySlides fade">
+        <div class="numbertext">1 / 3</div>
+        <img src="img/cou13.png" style="width:100%">
+        <div class="text">Counselor</div>
+      </div>
+
+      <div class="mySlides fade">
+        <div class="numbertext">1 / 3</div>
+        <img src="img/cou14.png" style="width:100%">
+        <div class="text">Counselor</div>
+      </div>
+
+      <div class="mySlides fade">
+        <div class="numbertext">1 / 3</div>
+        <img src="img/cou15.png" style="width:100%">
+        <div class="text">Counselor</div>
+      </div>
+
+      <div class="mySlides fade">
+        <div class="numbertext">1 / 3</div>
+        <img src="img/cou16.png" style="width:100%">
+        <div class="text">Counselor</div>
+      </div>
+
+      <div class="mySlides fade">
+        <div class="numbertext">1 / 3</div>
+        <img src="img/cou17.png" style="width:100%">
+        <div class="text">Counselor</div>
+      </div>
+
+      <div class="mySlides fade">
+        <div class="numbertext">1 / 3</div>
+        <img src="img/cou18.png" style="width:100%">
+        <div class="text">Counselor</div>
+      </div>
+
+      <div class="mySlides fade">
+        <div class="numbertext">1 / 3</div>
+        <img src="img/cou19.png" style="width:100%">
+        <div class="text">Counselor</div>
+      </div>
+      
+      <div class="mySlides fade">
+        <div class="numbertext">1 / 3</div>
+        <img src="img/cou20.png" style="width:100%">
+        <div class="text">Counselor</div>
+      </div>
+
+      <div class="mySlides fade">
+        <div class="numbertext">1 / 3</div>
+        <img src="img/cou21.png" style="width:100%">
+        <div class="text">Counselor</div>
+      </div>
+
+      <!-- Next and previous buttons -->
+      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+      <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
+    <br>
+
+    <!-- The dots/circles -->
+    <div style="text-align:center">
+      <span class="dot" onclick="currentSlide(1)"></span>
+      <span class="dot" onclick="currentSlide(2)"></span>
+      <span class="dot" onclick="currentSlide(3)"></span>
+    </div>
+
+    <!-- Practitioner Gallery Section 
     <div class="gallery">
       <div class="thumbnail">
         <a href="thumb" alt="therapist1" title="th1"><img src="img/cou1.png"></a>
@@ -148,13 +292,13 @@
       <div class="thumbnail">
         <a href="thumb" alt="therapist1" title="th1"><img src="img/cou21.png"></a>
       </div>
-    </div>
+    </div> -->
     <!-- Footer -->
     <footer>
 
     </footer>
     </div>
-  </div>
+    </div>
 </div>
     <script src="main.js"></script>
   </body>
