Style.css and main.js styling edits. Added footer with social media links.

--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
   <body>
     <!-- Header -->
     <header>
+      <img src="img/ph_main.png" alt="patient and client in session" title="example of a session">
       <h2 class="hero_header">People<span class="light">House</span></h2>
       <nav>
         <!-- Main Menu -->
