--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <a href="#click" class="menu"><h2 class="menu-title menu-title_3rd">Where?</h2>
             <!-- Company Sub Menu -->
             <ul class="menu-dropdown">
-              <li>Central/li>
+              <li>Central</li>
               <li>North</li>
               <li>East</li>
             </ul>
@@ -89,7 +89,7 @@
       <!-- Full-width images with number and caption text -->
       <div class="mySlides fade">
         <div class="numbertext">1 / 3</div>
-        <img src="img/cou1.png" style="width:100%">
+        <img src="img/cou1.png" style="width:50%">
         <div class="text">Counselor</div>
       </div>
 
@@ -295,8 +295,45 @@
     </div> -->
     <!-- Footer -->
     <footer>
+      <div id="footer-wrapper">
+        <div class="footer-limit" id="footer-limit">
+          <div class="footer no-items section" id="footer-1"></div>
+        </div>
+      </div>
 
-    </footer>
+      <!-- Footer social start -->
+      <div id="sosmedup">
+      <div class="footer-social section" id="Postwidegt2" name="Footer Social Links"><div class="widget LinkList" data-version="1" id="LinkList100">
+      <div class="widget-content">
+        <ul>
+          <li><a href="https://www.facebook.com/PeopleHouseDenver/" rel="nofollow noopener" target="_blank"><i class="fa fa-facebook-square"></i></a></li>
+          <li><a href="https://www.instagram.com/peoplehousedenver/?hl=en" rel="nofollow noopener" target="_blank"><i id="instagram" class="fa fa-instagram"></i></a></li>
+          <li><a href="https://twitter.com/peoplehouseco?lang=en" rel="nofollow noopener" target="_blank"><i class="fa fa-twitter"></i></a></li>
+        </ul>
+      </div>
+      </div>
+      <!-- Footer social end -->
+      <!-- Footer menu start -->
+      <div class="footmenu">
+      <div class="footer-menu section" id="Postwidegt3" name="Footer Menu"><div class="widget LinkList" data-version="1" id="LinkList101">
+      <div class="widget-content">
+      <ul>
+      <li><a href="#" rel="nofollow" title="About">About</a></li>
+      <li><a href="#" rel="nofollow" title="Contact">Contact</a></li>
+      <li><a href="#" rel="nofollow" title="Disclaimer">Disclaimer</a></li>
+      <li><a href="#" rel="nofollow" title="Privacy Policy">Privacy Policy</a></li>
+      </ul>
+      </div>
+      </div></div>
+      </div>
+      <!-- Footer menu end -->
+      <!-- Footer credit start -->
+      <div class="credit-wrapper"><div class="creditfooter">
+      Copyright © 2021 Jovaughn Ewing</a>. All Rights Reserved.
+      </div>
+      </div>
+      <!-- Footer credit end -->
+      </footer>
     </div>
     </div>
 </div>
