Major CSS overhaul

--- a/about.html
+++ b/about.html
@@ -14,6 +14,52 @@
   </head>
   <body>
     <!-- Header -->
+    <div class="main-wrapper">
+      <header class="header">
+        <div class="logo">
+          <h1>People House</h1>
+        </div>
+        <div class="feature-content">
+          <h1>Start of a new you!</h1>
+          <p>Welcome to your road to freedom!</p>
+          <a href="services.html" class="theme-btn btn-animated">Click here to find a specialist!</a>
+        </div>
+      </header>
+      
+      <div class="menu-icon">
+          <img src="https://img.icons8.com/cotton/2x/menu.png"/>
+       </div>
+      
+      <div class="nav-bar" style="display: none;">
+        <ul>
+          <li>
+            <a href="#">
+              Who are we!
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              What we do!
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              Where are we!
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              Blogs
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              Contact us
+            </a>
+          </li>
+        </ul>
+      </div>
+  </div>
     <header>
       <img src="img/ph_main.png" alt="patient and client in session" title="example of a session">
       <h2 class="hero_header">People<span class="light">House</span></h2>
