--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <!-- Header -->
+    
     <header>
       <h2 class="hero_header">People<span class="light">House</span></h2>
       <nav>
@@ -65,28 +66,28 @@
     <!-- Hero Section -->
  
 
-     <!-- Main Section -->
+    <!-- Main Section -->
      <main>
-      <section class="banner">
-        <p class="tagline">Your safe space, to work on you!</p>
-        <img class="site_banner">
-        <h2 class="parallax">We are here for you! Yes. You!</h2>
-        <p class="parallax_description">Placeholder</p>
-      </section>
-       <!-- This is where I need to insert the gallery scroller-->
+    <!-- This is where I need to insert the gallery scroller-->
     </main>
-      <!-- About Section -->
+    <!-- About Section -->
     <section class="about" id="about">
-      <h2 class="hidden">Meet Your Therapist</h2>
-      <p class="text_column">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
-      <p class="text_column">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
-      <p class="text_column">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+      <h2 class="hidden">People House Promise</h2>
+      <p class="text_column">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p class="text_column">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p class="text_column">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </section>
+    <section class="banner">
+      <p class="tagline">Your safe space, to work on you!</p>
+      <img class="site_banner">
+      <h2 class="parallax">We are here for you! Yes. You!</h2>
+      <p class="parallax_description"></p>
     </section>
 
     <!-- Slideshow container -->
     <div class="slideshow-container">
 
-      <!-- Full-width images with number and caption text -->
+    <!-- Full-width images with number and caption text -->
       <div class="mySlides fade">
         <div class="numbertext">1 / 3</div>
         <img src="img/cou1.png" style="width:50%">
